# pack-logger

./: .gitignore  .npmignore  DOCKER.md  EXAMPLES.md  LICENSE  README.md  RELEASE_INSTRUCTIONS.md  UPDATE.md  USAGE.md  package-lock.json  package.json  tsconfig.json
backend/: README.md  pyproject.toml  setup.py
backend/pack_logger/: __init__.py  logger.py  middleware.py
frontend/: README.md  package.json
src/: index.ts  logger.ts
