[project]
name = "pack-logger"
version = "0.1.0"
description = "Universal logging package for Olivin App"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Example User", email = "example.user@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "rich>=14.0.0",
]

[project.optional-dependencies]
django = [
    "django>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pack_logger*"]

[tool.setuptools.package-data]
pack_logger = ["py.typed"]